criando nova participacao para jogo

--- a/GFRPG/app/views/games/show.html.erb
+++ b/GFRPG/app/views/games/show.html.erb
@@ -2,3 +2,5 @@
 
 <%= link_to 'Edit', edit_game_path(@game) %> |
 <%= link_to 'Back', games_path %>
+<%= link_to 'Adicionar Participação', new_participation_path(:game => @game) %>
+
