--- a/GFRPG/app/views/participations/new.html.erb
+++ b/GFRPG/app/views/participations/new.html.erb
@@ -1,6 +1,5 @@
 <h1>New Participation</h1>
-Game: <%= @game %>
-
+<%= @participation.game %>
 <%= render 'form', participation: @participation %>
 
 <%= link_to 'Back', participations_path %>
