--- a/GFRPG/app/views/participations/_form.html.erb
+++ b/GFRPG/app/views/participations/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: participation, local: true) do |form| %>
-  <% if participation.errors.any? %>
+   <% if participation.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(participation.errors.count, "error") %> prohibited this participation from being saved:</h2>
 
@@ -10,7 +10,7 @@
       </ul>
     </div>
   <% end %>
-
+  <%= form.hidden_field :game, :value => @game.id %>
   <div class="actions">
     <%= form.submit %>
   </div>
