--- a/GFRPG/app/views/users/_form.html.erb
+++ b/GFRPG/app/views/users/_form.html.erb
@@ -11,7 +11,18 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= form.label :name %>
+    <%= form.text_field :name, id: :user_name %>
+  </div>
+
+  <div class="field">
+    <%= form.label :secret %>
+    <%= form.password_field :secret, id: :user_secret %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
 <% end %>
+
