--- a/GFRPG/app/views/games/_form.html.erb
+++ b/GFRPG/app/views/games/_form.html.erb
@@ -26,9 +26,14 @@
     <%= form.date_select :Game_date, id: :game_Game_date %>
   </div>
 
+  <%= form.hidden_field :mestre_id, :value =>  cookies[:mestre] %>
+
   <div class="actions">
     <%= form.submit %>
   </div>
+
+  
+
 <% end %>
 
 
