fixed create user

--- a/GFRPG/app/views/users/_form.html.erb
+++ b/GFRPG/app/views/users/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div class="field">
     <%= form.label :name %>
-    <%= form.text_field :name, id: :user_name %>
+    <%= form.text_field :name, id: :name %>
   </div>
 
   <div class="field">
     <%= form.label :secret %>
-    <%= form.password_field :secret, id: :user_secret %>
+    <%= form.password_field :pass, id: :user_pass %>
   </div>
 
   <div class="actions">
