--- a/GFRPG/app/views/games/show.html.erb
+++ b/GFRPG/app/views/games/show.html.erb
@@ -16,6 +16,11 @@
   <%= @game.Game_date %>
 </p>
 
+<p>
+  <strong>Mestre_id:</strong>
+  <%= @game.mestre_id %>
+</p>
+
 <%= link_to 'Edit', edit_game_path(@game) %> |
 <%= link_to 'Back', games_path %>
 <%= link_to 'Adicionar Participação', new_participation_path(:game => @game) %>
