--- a/GFRPG/app/views/games/index.html.erb
+++ b/GFRPG/app/views/games/index.html.erb
@@ -12,9 +12,9 @@
   <tbody>
     <% @games.each do |game| %>
       <p>
-          <strong>Game_name:</strong>
-          <!--%= @game.Game_name %-->
-          <%= game.Game_name %>
+          <strong>name:</strong>
+          <!--%= @game.name %-->
+          <%= game.name %>
       </p>
 
       <tr>
