--- a/GFRPG/app/views/games/show.html.erb
+++ b/GFRPG/app/views/games/show.html.erb
@@ -2,18 +2,18 @@
 
 
 <p>
-  <strong>Game_name:</strong>
-  <%= @game.Game_name %>
+  <strong>name:</strong>
+  <%= @game.name %>
 </p>
 
 <p>
-  <strong>Game_description:</strong>
-  <%= @game.Game_description %>
+  <strong>description:</strong>
+  <%= @game.description %>
 </p>
 
 <p>
-  <strong>Game_date:</strong>
-  <%= @game.Game_date %>
+  <strong>date:</strong>
+  <%= @game.date %>
 </p>
 
 <p>
